Updated surefire plugin version, fixed jxc build without nb-javac-api.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/jaxb-jxc-jdk9/pom.xml
+++ b/jaxb-ri/jaxb-jxc-jdk9/pom.xml
@@ -205,7 +205,7 @@
                     <reuseForks>false</reuseForks>
                     <argLine>
                         --add-reads java.base=java.desktop
-                        --add-modules java.xml.bind
+                        --add-modules java.xml.bind,java.compiler
                         --upgrade-module-path ${endorsed.dir}
                         -Djdk.attach.allowAttachSelf
                     </argLine>
