--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -53,7 +53,7 @@
 
     <groupId>org.glassfish.jaxb</groupId>
     <artifactId>jaxb-bom</artifactId>
-    <version>2.3.0-jaxb1-removed</version>
+    <version>2.3.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>JAXB BOM</name>
