--- a/jaxb-ri/docs/release-documentation/pom.xml
+++ b/jaxb-ri/docs/release-documentation/pom.xml
@@ -49,7 +49,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-docs-parent</artifactId>
-        <version>2.3.0-jaxb1-removed</version>
+        <version>2.3.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.sun.xml.bind</groupId>
