--- a/jaxb-ri/jaxb-xjc-jdk9/pom.xml
+++ b/jaxb-ri/jaxb-xjc-jdk9/pom.xml
@@ -47,7 +47,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-parent</artifactId>
-        <version>2.3.0-jaxb1-removed</version>
+        <version>2.3.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
