Update shell scripts to use module path. Added dependency to javax.annotation (fix for jdk without java.xml.bind module).
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -185,6 +185,9 @@
                         </goals>
                         <configuration>
                             <archive>
+                                <manifestEntries>
+                                    <Multi-Release>true</Multi-Release>
+                                </manifestEntries>
                                 <manifest>
                                     <mainClass>com.sun.tools.jxc.SchemaGeneratorFacade</mainClass>
                                 </manifest>
