--- a/jaxb-ri/xjc/pom.xml
+++ b/jaxb-ri/xjc/pom.xml
@@ -235,6 +235,9 @@
                         </goals>
                         <configuration>
                             <archive>
+                                <manifestEntries>
+                                    <Multi-Release>true</Multi-Release>
+                                </manifestEntries>
                                 <manifest>
                                     <mainClass>com.sun.tools.xjc.XJCFacade</mainClass>
                                 </manifest>
