--- a/jaxb-ri/external/rngom/pom.xml
+++ b/jaxb-ri/external/rngom/pom.xml
@@ -85,10 +85,6 @@
                         <id>default-compile</id>
                         <configuration>
                             <release>${upper.java.level}</release>
-                            <compilerArgs>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.tools.rngom=relaxngDatatype</arg>
-                            </compilerArgs>
                         </configuration>
                     </execution>
                     <execution>
@@ -105,26 +101,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.0-M1</version>
-                <configuration>
-                    <additionalJOptions>
-                        <additionalJOption>--add-reads</additionalJOption>
-                        <!--Dependency for relaxngDatatype is put on classpath by javadoc plugin-->
-                        <!--TODO remove after javadoc-plugin 3.0.0 is released, see https://issues.apache.org/jira/browse/MJAVADOC-498 -->
-                        <additionalJOption>com.sun.tools.rngom=ALL-UNNAMED</additionalJOption>
-                    </additionalJOptions>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
     <dependencies>
         <dependency>
-            <groupId>relaxngDatatype</groupId>
-            <artifactId>relaxngDatatype</artifactId>
+            <groupId>com.sun.xml.bind.external</groupId>
+            <artifactId>relaxng-datatype</artifactId>
         </dependency>
         
         <!-- Test -->
