--- a/jaxb-ri/bundles/jxc/pom.xml
+++ b/jaxb-ri/bundles/jxc/pom.xml
@@ -280,7 +280,7 @@
                                     <exclude>javax.xml.bind:jaxb-api</exclude>
 
                                     <exclude>org.glassfish.jaxb:xsom</exclude>
-                                    <exclude>relaxngDatatype:relaxngDatatype</exclude>
+                                    <exclude>com.sun.xml.bind.external:relaxng-datatype</exclude>
 
                                     <exclude>org.glassfish.jaxb:codemodel</exclude>
                                     <exclude>com.sun.tools.rngom:rngom</exclude>
