--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -115,7 +115,7 @@
 
     <build>
         <plugins>
-            <plugin> <!-- we don't want to fix javadocs in external libs (e.g. relaxngDatatype) -->
+            <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <executions>
                     <execution>
@@ -320,8 +320,8 @@
                                     org.jvnet.staxex;version=${stax-ex.version},
                                     org.jvnet.staxex.util;version=${stax-ex.version},
                                     com.sun.tools.rngom.*;version=${jaxb.osgiVersion},
-                                    org.relaxng.datatype;version=${relaxngDatatype.version},
-                                    org.relaxng.datatype.*;version=${relaxngDatatype.version}
+                                    com.sun.xml.bind.external;version=${jaxb.osgiVersion},
+                                    com.sun.xml.bind.external.*;version=${jaxb.osgiVersion}
                                 </Export-Package>
                                 <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                                 <Import-Package>
@@ -410,11 +410,11 @@
                                     <include>com.sun.xml.fastinfoset:FastInfoset</include>
                                     <include>org.glassfish.jaxb:txw2</include>
                                     <include>com.sun.istack:istack-commons-runtime</include>
+                                    <include>com.sun.xml.bind.external:relaxng-datatype</include>
                                 </includes>
                                 <excludes>
                                     <exclude>org.glassfish.jaxb:jaxb-runtime</exclude>
                                     <exclude>javax.xml.bind:jaxb-api</exclude>
-                                    <exclude>relaxngDatatype:relaxngDatatype</exclude>
                                 </excludes>
                             </artifactSet>
                             <transformers>
