correct artifact for activation API
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/bundles/ri/pom.xml
+++ b/jaxb-ri/bundles/ri/pom.xml
@@ -147,8 +147,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>javax.activation</artifactId>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
             <optional>true</optional>
         </dependency>
     </dependencies>
