--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -219,8 +219,8 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>javax.activation</artifactId>
+                <groupId>javax.activation</groupId>
+                <artifactId>javax.activation-api</artifactId>
                 <version>1.2.0</version>
             </dependency>
         </dependencies>
