--- a/jaxb-ri/external/relaxng-datatype/pom.xml
+++ b/jaxb-ri/external/relaxng-datatype/pom.xml
@@ -41,6 +41,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <additionalJOptions>
+                        <additionalparam>-Xdoclint:none</additionalparam>
+                    </additionalJOptions>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
