--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -257,7 +257,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <additionalJOptions>
-                        <additionalJOption>--module-path</additionalJOption>
+                        <additionalJOption>--upgrade-module-path</additionalJOption>
                         <additionalJOption>${project.build.directory}/mods</additionalJOption>
                         <additionalJOption>--add-modules</additionalJOption>
                         <additionalJOption>ant</additionalJOption>
