Javadoc xdoclint for xjc and osgi bundles.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/bundles/xjc/pom.xml
+++ b/jaxb-ri/bundles/xjc/pom.xml
@@ -135,11 +135,11 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
                             <sourceFileExcludes>
                                 <sourceFileExclude>META-INF/versions/**</sourceFileExclude>
                             </sourceFileExcludes>
                             <additionalJOptions>
+                                <additionalJOption>-Xdoclint:none</additionalJOption>
                                 <additionalJOption>--add-modules</additionalJOption>
                                 <additionalJOption>java.activation</additionalJOption>
                                 <additionalJOption>--add-exports</additionalJOption>
