--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -124,13 +124,13 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
                             <sourceFileExcludes>
                                 <sourceFileExclude>META-INF/versions/**</sourceFileExclude>
                                 <sourceFileExclude>module-info.java</sourceFileExclude>
                             </sourceFileExcludes>
                             <includeDependencySources>false</includeDependencySources>
                             <additionalJOptions>
+                                <additionalJOption>-Xdoclint:none</additionalJOption>
                                 <additionalJOption>--add-modules</additionalJOption>
                                 <additionalJOption>java.activation,java.xml.bind</additionalJOption>
                                 <additionalJOption>--add-exports</additionalJOption>
