Updated OSGi core dependecny.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/bundles/osgi/tests/pom.xml
+++ b/jaxb-ri/bundles/osgi/tests/pom.xml
@@ -75,8 +75,8 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>org.osgi.core</artifactId>
+                    <groupId>org.osgi</groupId>
+                    <artifactId>osgi.core</artifactId>
                     <version>${felix.osgi.core}</version>
                     <scope>test</scope>
                 </dependency>
