--- a/jaxb-ri/tools/osgi_tests/pom.xml
+++ b/jaxb-ri/tools/osgi_tests/pom.xml
@@ -70,4 +70,15 @@
         <module>xjc</module>
         <module>osgi</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
