--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -60,7 +60,7 @@
     <description>JAXB Bill of Materials (BOM)</description>
 
     <properties>
-        <jaxb-api.version>2.3.1-RC1</jaxb-api.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
         <jaxb-api-osgi.version>2.3</jaxb-api-osgi.version>
         <istack.version>3.0.7</istack.version>
         <fastinfoset.version>1.2.15</fastinfoset.version>
